add DELETE /ingredients
